// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render links for authenticated admin users. 1`] = `
<div>
  <nav
    class="navbar navbar-expand-lg navbar-light bg-light justify-content-between nav-bar-position"
  >
    <button
      aria-controls="navbarTogglerDemo03"
      aria-expanded="false"
      aria-label="Toggle navigation"
      class="navbar-toggler"
      data-target="#navbarTogglerDemo03"
      data-toggle="collapse"
      type="button"
    >
      <span
        class="navbar-toggler-icon"
      />
    </button>
    <a
      class="navbar-brand"
      href="#/"
    >
      Shoppify
    </a>
    <div
      class="collapse navbar-collapse"
      id="navbarTogglerDemo03"
    >
      <ul
        class="navbar-nav mr-auto mt-2 mt-lg-0"
      >
        
        <li
          class="nav-item"
        >
          <a
            class="nav-link glyphicon glyphicon-shopping-cart"
            href="#/cart"
          >
            <span
              class="glyphicon glyphicon-shopping-cart"
            >
              Cart
            </span>
          </a>
        </li>
      </ul>
      <span>
        Hi, Admin  
      </span>
      <button
        class="nav-link logout_btn"
      >
        Logout
      </button>
    </div>
  </nav>
</div>
`;

exports[`Header should render links for authenticated non-admin users. 1`] = `
<div>
  <nav
    class="navbar navbar-expand-lg navbar-light bg-light justify-content-between nav-bar-position"
  >
    <button
      aria-controls="navbarTogglerDemo03"
      aria-expanded="false"
      aria-label="Toggle navigation"
      class="navbar-toggler"
      data-target="#navbarTogglerDemo03"
      data-toggle="collapse"
      type="button"
    >
      <span
        class="navbar-toggler-icon"
      />
    </button>
    <a
      class="navbar-brand"
      href="#/"
    >
      Shoppify
    </a>
    <div
      class="collapse navbar-collapse"
      id="navbarTogglerDemo03"
    >
      <ul
        class="navbar-nav mr-auto mt-2 mt-lg-0"
      >
        
        <li
          class="nav-item"
        >
          <a
            class="nav-link glyphicon glyphicon-shopping-cart"
            href="#/cart"
          >
            <span
              class="glyphicon glyphicon-shopping-cart"
            >
              Cart
            </span>
          </a>
        </li>
      </ul>
      <span>
        Hi, User  
      </span>
      <button
        class="nav-link logout_btn"
      >
        Logout
      </button>
    </div>
  </nav>
</div>
`;

exports[`Header should render links for unauthenticated users. 1`] = `
<div>
  <nav
    class="navbar navbar-expand-lg navbar-light bg-light justify-content-between nav-bar-position"
  >
    <button
      aria-controls="navbarTogglerDemo03"
      aria-expanded="false"
      aria-label="Toggle navigation"
      class="navbar-toggler"
      data-target="#navbarTogglerDemo03"
      data-toggle="collapse"
      type="button"
    >
      <span
        class="navbar-toggler-icon"
      />
    </button>
    <a
      class="navbar-brand"
      href="#/"
    >
      Shoppify
    </a>
    <div
      class="collapse navbar-collapse"
      id="navbarTogglerDemo03"
    >
      <ul
        class="navbar-nav mr-auto mt-2 mt-lg-0"
      >
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="#/register"
          >
            Register
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="#/login"
          >
            Login
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;
